--- a/views/components/alert.html
+++ b/views/components/alert.html
@@ -1,4 +1,4 @@
-<div class="view-box ui-form">
+<div class="ui-views ui-form">
 	<div class="ui-quote">弹出层</div>
 	<div class="ui-mg-row-20 clear">
 		<a href="javascript: ;" class="ui-btn-info" ng-click="prompt()" style="float: left;">点击弹出提示框</a>
