--- a/views/components/button.html
+++ b/views/components/button.html
@@ -1,4 +1,4 @@
-<div class="view-box">
+<div class="ui-views">
 	<div class="ui-quote">按钮</div>
 	<div class="ui-table-box">
 		<table class="ui-table" ui-border="all">
