--- a/views/components/editor.html
+++ b/views/components/editor.html
@@ -1,4 +1,4 @@
-<div class="view-box">
+<div class="ui-views">
 	<div class="ui-quote">富文本</div>
 	<div id="editor">
 	    <p>欢迎使用 <b>wangEditor</b> 富文本编辑器</p><p></p><p>使用方式：</p><pre style="border: solid 1px #ccc; padding: 8px; background: #f1f1f1; border-radius: 3px;"><code>&lt;div id="edtior"&gt;&lt;/div&gt;</code></pre><pre style="border: solid 1px #ccc; padding: 8px; background: #f1f1f1; border-radius: 3px;"><code>if(!E){
@@ -13,7 +13,7 @@ editor.create()</code></pre>
 		if(!E){
 	    var E = window.wangEditor
 	    var editor = new E('#editor')
-	    editor.customConfig.uploadImgShowBase64 = true
+	    editor.customConfig.uploadImgShowBase64 = true;
 	  }
 	  editor.create()
 	</script>
