--- a/views/components/form.html
+++ b/views/components/form.html
@@ -1,4 +1,4 @@
-<div class="view-box">
+<div class="ui-views">
 	<!-- <div class="ui-quote">表单元素</div> -->
 	<div class="ui-tle-h2" style="margin-top: 0">input/textarea输入框</div>
 	<div class="ui-form">
