--- a/views/components/pagination.html
+++ b/views/components/pagination.html
@@ -1,4 +1,4 @@
-<div class="view-box">
+<div class="ui-views">
 	<div class="ui-quote">分页</div>
 	<pagination url="{{$root.domain}}/json/page.json" data="data" query="query"></pagination>
 	<div class="ui-tip ui-mg-row-20">
