--- a/views/components/tables.html
+++ b/views/components/tables.html
@@ -1,4 +1,4 @@
-<div class="view-box">
+<div class="ui-views">
 	<!-- <h1>表格<small>自定义表格</small></h1> -->
 	<div class="ui-quote">自定义表格</div>
 	<div class="ui-tabs-box">
