--- a/views/components/tabs.html
+++ b/views/components/tabs.html
@@ -1,4 +1,4 @@
-<div class="view-box">
+<div class="ui-views">
 	<div class="ui-quote">选项卡</div>
 	<div class="ui-wd-6">
 		<div class="ui-tabs-box ui-nobd">
