--- a/views/components/title.html
+++ b/views/components/title.html
@@ -1,4 +1,4 @@
-<div class="view-box">
+<div class="ui-views">
 	<h1 class="ui-title">&lt;h1 class="ui-title"&gt;标题h1&lt;h1&gt;</h1>
 	<h2 class="ui-title">&lt;h2 class="ui-title"&gt;标题h2&lt;h2&gt;</h2>
 	<h3 class="ui-title">&lt;h3 class="ui-title"&gt;标题h3&lt;h3&gt;</h3>
