--- a/views/demo/list.html
+++ b/views/demo/list.html
@@ -1,4 +1,4 @@
-<div class="view-box">
+<div class="ui-views">
 	<div class="ui-quote">列表页</div>
 	<div class="ui-query-box">
 		<div class="ui-form ui-query">
