--- a/views/home.html
+++ b/views/home.html
@@ -30,11 +30,12 @@
 				<span>插件集</span>
 			</a>
 			<div class="ui-items-call">
-				<a href="javascript: void(0);"><i>&#xe62d;</i><span>图片上传</span></a>
+				<a href="javascript: void(0);" ui-sref="home.comp.upfile" ng-class="{active: $root.state === 'upfile'}"><i>&#xe62d;</i><span>图片上传</span></a>
 				<a href="javascript: void(0);" ui-sref="home.comp.pagination" ng-class="{active: $root.state === 'pagination'}"><i>&#xed71;</i><span>分页</span></a>
 				<a href="javascript: void(0);" ui-sref="home.comp.alert" ng-class="{active: $root.state === 'alert'}"><i>&#xe744;</i><span>弹出层</span></a>
-				<a href="javascript: void(0);"><i>&#xe61f;</i><span>时间选择器</span></a>
+				<a href="javascript: void(0);" ui-sref="home.comp.date" ng-class="{active: $root.state === 'date'}"><i>&#xe61f;</i><span>时间选择器</span></a>
 				<a href="javascript: void(0);" ui-sref="home.comp.editor" ng-class="{active: $root.state === 'editor'}"><i>&#xe66a;</i><span>富文本</span></a>
+				<a href="javascript: void(0);" ui-sref="home.comp.map" ng-class="{active: $root.state === 'map'}"><i>&#xe66a;</i><span>地图-高德</span></a>
 			</div>
 		</li>
 		<li>
