--- a/views/demo/list.html
+++ b/views/demo/list.html
@@ -120,6 +120,11 @@
 		</div>
 		<div class="ui-query-more"></div>
 	</div>
+	<div align="right">
+		<a href="#" class="ui-btn-danger ui-small">按钮</a>
+		<a href="javascript: ;" class="ui-btn-normal-outline ui-font"><i>&#xe608;</i></a>
+		<a href="javascript: ;" class="ui-btn-raw-outline ui-font"><i>&#xe631;</i></a>
+	</div>
 	<div class="ui-table-box ui-pd-row-15">
 		<table class="ui-table" ui-border="all" ui-background="even" ui-hover>
 			<colgroup>
