--- a/views/welcome.html
+++ b/views/welcome.html
@@ -1,4 +1,4 @@
-<div class="ui-views">
+<div class="ui-views" style="background: #f1f1f1;">
 	<div class="ui-welcome-head">
 		<ul class="clear">
 			<li>
@@ -39,7 +39,339 @@
 			</li>
 		</ul>
 	</div>
+	<div class="ui-wd-12">
+		<div id="main1" class="ui-wd-6" style="height: 400px;"></div>
+		<div id="main2" class="ui-wd-6" style="height: 400px;"></div>
+		<div id="main3" class="ui-wd-6" style="height: 400px;"></div>
+		<div id="main4" class="ui-wd-6" style="height: 400px;"></div>
+	</div>
 </div>
 <style>
 	.view-box{background: #eee;}
 </style>
+<script>
+if(myChart1){
+	var myChart1 = echarts.init(document.getElementById('main1'));
+	myChart1.setOption(option1);
+	var myChart2 = echarts.init(document.getElementById('main2'));
+	myChart2.setOption(option2);
+	var myChart3 = echarts.init(document.getElementById('main3'));
+	myChart3.setOption(option3);
+	var myChart4 = echarts.init(document.getElementById('main4'));
+	myChart4.setOption(option4);
+}else{
+	var myChart1 = echarts.init(document.getElementById('main1'));
+	option1 = {
+	    color: ['#3398DB'],
+	    tooltip : {
+	        trigger: 'axis',
+	        axisPointer : {            // 坐标轴指示器，坐标轴触发有效
+	            type : 'shadow'        // 默认为直线，可选为：'line' | 'shadow'
+	        }
+	    },
+	    grid: {
+	        left: '3%',
+	        right: '4%',
+	        bottom: '3%',
+	        containLabel: true
+	    },
+	    xAxis : [
+	        {
+	            type : 'category',
+	            data : ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],
+	            axisTick: {
+	                alignWithLabel: true
+	            }
+	        }
+	    ],
+	    yAxis : [
+	        {
+	            type : 'value'
+	        }
+	    ],
+	    series : [
+	        {
+	            name:'直接访问',
+	            type:'bar',
+	            barWidth: '60%',
+	            data:[10, 52, 200, 334, 390, 330, 220]
+	        }
+	    ]
+	};
+	myChart1.setOption(option1);
+
+
+	var myChart2 = echarts.init(document.getElementById('main2'));
+	option2 = {
+	    title : {
+	        text: '某站点用户访问来源',
+	        subtext: '纯属虚构',
+	        x:'center'
+	    },
+	    tooltip : {
+	        trigger: 'item',
+	        formatter: "{a} <br/>{b} : {c} ({d}%)"
+	    },
+	    legend: {
+	        orient: 'vertical',
+	        left: 'left',
+	        data: ['直接访问','邮件营销','联盟广告','视频广告','搜索引擎']
+	    },
+	    series : [
+	        {
+	            name: '访问来源',
+	            type: 'pie',
+	            radius : '55%',
+	            center: ['50%', '60%'],
+	            data:[
+	                {value:335, name:'直接访问'},
+	                {value:310, name:'邮件营销'},
+	                {value:234, name:'联盟广告'},
+	                {value:135, name:'视频广告'},
+	                {value:1548, name:'搜索引擎'}
+	            ],
+	            itemStyle: {
+	                emphasis: {
+	                    shadowBlur: 10,
+	                    shadowOffsetX: 0,
+	                    shadowColor: 'rgba(0, 0, 0, 0.5)'
+	                }
+	            }
+	        }
+	    ]
+	};
+	myChart2.setOption(option2);
+
+
+	var myChart3 = echarts.init(document.getElementById('main3'));
+
+
+	option3 = {
+	    color: ['#5793f3', '#d14a61', '#675bba'],
+
+	    tooltip: {
+	        trigger: 'none',
+	        axisPointer: {
+	            type: 'cross'
+	        }
+	    },
+	    legend: {
+	        data:['2015 降水量', '2016 降水量']
+	    },
+	    grid: {
+	        top: 70,
+	        bottom: 50
+	    },
+	    xAxis: [
+	        {
+	            type: 'category',
+	            axisTick: {
+	                alignWithLabel: true
+	            },
+	            axisLine: {
+	                onZero: false,
+	                lineStyle: {
+	                    color: '#d14a61'
+	                }
+	            },
+	            axisPointer: {
+	                label: {
+	                    formatter: function (params) {
+	                        return '降水量  ' + params.value
+	                            + (params.seriesData.length ? '：' + params.seriesData[0].data : '');
+	                    }
+	                }
+	            },
+	            data: ["2016-1", "2016-2", "2016-3", "2016-4", "2016-5", "2016-6", "2016-7", "2016-8", "2016-9", "2016-10", "2016-11", "2016-12"]
+	        },
+	        {
+	            type: 'category',
+	            axisTick: {
+	                alignWithLabel: true
+	            },
+	            axisLine: {
+	                onZero: false,
+	                lineStyle: {
+	                    color: '#5793f3'
+	                }
+	            },
+	            axisPointer: {
+	                label: {
+	                    formatter: function (params) {
+	                        return '降水量  ' + params.value
+	                            + (params.seriesData.length ? '：' + params.seriesData[0].data : '');
+	                    }
+	                }
+	            },
+	            data: ["2015-1", "2015-2", "2015-3", "2015-4", "2015-5", "2015-6", "2015-7", "2015-8", "2015-9", "2015-10", "2015-11", "2015-12"]
+	        }
+	    ],
+	    yAxis: [
+	        {
+	            type: 'value'
+	        }
+	    ],
+	    series: [
+	        {
+	            name:'2015 降水量',
+	            type:'line',
+	            xAxisIndex: 1,
+	            smooth: true,
+	            data: [2.6, 5.9, 9.0, 26.4, 28.7, 70.7, 175.6, 182.2, 48.7, 18.8, 6.0, 2.3]
+	        },
+	        {
+	            name:'2016 降水量',
+	            type:'line',
+	            smooth: true,
+	            data: [3.9, 5.9, 11.1, 18.7, 48.3, 69.2, 231.6, 46.6, 55.4, 18.4, 10.3, 0.7]
+	        }
+	    ]
+	};
+
+	myChart3.setOption(option3);
+
+
+	var myChart4 = echarts.init(document.getElementById('main4'));
+	function randomData() {
+	    return Math.round(Math.random()*1000);
+	}
+	option4 = {
+	    tooltip: {
+	        trigger: 'item'
+	    },
+	    legend: {
+	        orient: 'vertical',
+	        left: 'left',
+	        data:['iphone3','iphone4','iphone5']
+	    },
+	    visualMap: {
+	        min: 0,
+	        max: 2500,
+	        left: 'left',
+	        top: 'bottom',
+	        text: ['高','低'],           // 文本，默认为数值文本
+	        calculable: true
+	    },
+	    toolbox: {
+	        show: true,
+	        orient: 'vertical',
+	        left: 'right',
+	        top: 'center',
+	        feature: {
+	            dataView: {readOnly: false},
+	            restore: {},
+	            saveAsImage: {}
+	        }
+	    },
+	    series: [
+	        {
+	            name: 'iphone3',
+	            type: 'map',
+	            mapType: 'china',
+	            roam: false,
+	            label: {
+	                normal: {
+	                    show: true
+	                },
+	                emphasis: {
+	                    show: true
+	                }
+	            },
+	            data:[
+	                {name: '北京',value: randomData() },
+	                {name: '天津',value: randomData() },
+	                {name: '上海',value: randomData() },
+	                {name: '重庆',value: randomData() },
+	                {name: '河北',value: randomData() },
+	                {name: '河南',value: randomData() },
+	                {name: '云南',value: randomData() },
+	                {name: '辽宁',value: randomData() },
+	                {name: '黑龙江',value: randomData() },
+	                {name: '湖南',value: randomData() },
+	                {name: '安徽',value: randomData() },
+	                {name: '山东',value: randomData() },
+	                {name: '新疆',value: randomData() },
+	                {name: '江苏',value: randomData() },
+	                {name: '浙江',value: randomData() },
+	                {name: '江西',value: randomData() },
+	                {name: '湖北',value: randomData() },
+	                {name: '广西',value: randomData() },
+	                {name: '甘肃',value: randomData() },
+	                {name: '山西',value: randomData() },
+	                {name: '内蒙古',value: randomData() },
+	                {name: '陕西',value: randomData() },
+	                {name: '吉林',value: randomData() },
+	                {name: '福建',value: randomData() },
+	                {name: '贵州',value: randomData() },
+	                {name: '广东',value: randomData() },
+	                {name: '青海',value: randomData() },
+	                {name: '西藏',value: randomData() },
+	                {name: '四川',value: randomData() },
+	                {name: '宁夏',value: randomData() },
+	                {name: '海南',value: randomData() },
+	                {name: '台湾',value: randomData() },
+	                {name: '香港',value: randomData() },
+	                {name: '澳门',value: randomData() }
+	            ]
+	        },
+	        {
+	            name: 'iphone4',
+	            type: 'map',
+	            mapType: 'china',
+	            label: {
+	                normal: {
+	                    show: true
+	                },
+	                emphasis: {
+	                    show: true
+	                }
+	            },
+	            data:[
+	                {name: '北京',value: randomData() },
+	                {name: '天津',value: randomData() },
+	                {name: '上海',value: randomData() },
+	                {name: '重庆',value: randomData() },
+	                {name: '河北',value: randomData() },
+	                {name: '安徽',value: randomData() },
+	                {name: '新疆',value: randomData() },
+	                {name: '浙江',value: randomData() },
+	                {name: '江西',value: randomData() },
+	                {name: '山西',value: randomData() },
+	                {name: '内蒙古',value: randomData() },
+	                {name: '吉林',value: randomData() },
+	                {name: '福建',value: randomData() },
+	                {name: '广东',value: randomData() },
+	                {name: '西藏',value: randomData() },
+	                {name: '四川',value: randomData() },
+	                {name: '宁夏',value: randomData() },
+	                {name: '香港',value: randomData() },
+	                {name: '澳门',value: randomData() }
+	            ]
+	        },
+	        {
+	            name: 'iphone5',
+	            type: 'map',
+	            mapType: 'china',
+	            label: {
+	                normal: {
+	                    show: true
+	                },
+	                emphasis: {
+	                    show: true
+	                }
+	            },
+	            data:[
+	                {name: '北京',value: randomData() },
+	                {name: '天津',value: randomData() },
+	                {name: '上海',value: randomData() },
+	                {name: '广东',value: randomData() },
+	                {name: '台湾',value: randomData() },
+	                {name: '香港',value: randomData() },
+	                {name: '澳门',value: randomData() }
+	            ]
+	        }
+	    ]
+	};
+	myChart4.setOption(option4);
+}
+</script>
